style: Positioned footer to fix at bottom. Increased container and navbar z-index. Level-down all h1, h2 and h3.

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -34,8 +34,11 @@ body {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
+  position: relative;
+  z-index: 1;
   width: 100%;
   min-height: 800px;
+  padding-bottom: 50px;
   margin: 0 auto;
 }
 
@@ -45,11 +48,14 @@ body {
   border-radius: 10px;
   background-color: #fff;
   overflow: hidden;
-  // transition: all 0.5s;
 }
 
 footer {
-  padding: 30px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 25px;
   text-align: center;
 }
 
