--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -1,9 +1,10 @@
 .navbar {
-  position: sticky;
-  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 2;
   width: 100%;
   margin: 20px auto;
   background-color: $background-color;
